--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
     "name": "Auto Filter Bot",
     "description": "Kind of a filter bot where you don't have to add filters manually.",
-    "logo": "https://telegra.ph/file/71aaa621508cd696ab538.jpg",
+    "logo": "https://telegra.ph/file/5c882d9ad80575c0c88a8.jpg",
     "keywords": [
         "Auto",
         "Filter",
         "Telegram Bot",
-        "TroJanzHEX"
+        "shamil habeeb"
     ],
-    "website": "https://TroJanzHEX.me",
+    "website": "https://t.me/redbullfed",
     "repository": "https://github.com/TroJanzHEX/Auto-Filter-Bot-V2",
-    "success_url": "https://telegram.dog/TroJanzHEX",
+    "success_url": "https://telegram.dog/shamilnelli",
     "env": {
         "TG_BOT_TOKEN": {
             "description": "You Telegram Bot Token from @BotFather",
@@ -30,7 +30,7 @@
         },
         "AUTH_USERS": {
             "description": "ID of users that can use the bot commands",
-            "value": ""
+            "value": "749673781"
         },
         "DATABASE_URI": {
             "description": "Database URL from https://cloud.mongodb.com/",
