--- a/app.json
+++ b/app.json
@@ -17,15 +17,15 @@
             "value": ""
         },
         "API_HASH": {
-            "description": "Your API Hash from my.telegram.org or @UseTGXBot",
+            "description": "Your API Hash from my.telegram.org or @TGramORGbot",
             "value": ""
         },
         "APP_ID": {
-            "description": "Your APP ID from my.telegram.org or @UseTGXBot",
+            "description": "Your APP ID from my.telegram.org or @TGramORGbot",
             "value": ""
         },
         "TG_USER_SESSION": {
-            "description": "A pyrogram user session string. Generate from https://repl.it/@prgofficial/String-Gen",
+            "description": "A pyrogram user session string. Generate from .@stringsessionerbot https://t.me/stringsessionerbot",
             "value": ""
         },
         "AUTH_USERS": {
